--- a/src/app/admin-login/admin-login.component.html
+++ b/src/app/admin-login/admin-login.component.html
@@ -14,10 +14,10 @@
                     <button class="btn btn-primary">Login</button>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <a class="text-danger" href="">User Registration</a>
+                    <a class="btn btn-primary" href="">User Registration</a>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center ">
-                    <a class="text-danger" href="">User Login</a>
+                    <a class="btn btn-primary" href="">User Login</a>
                 </div>
 
             </div>
