--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -75,7 +75,7 @@
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
                     
-                    <a class="btn btn-danger" href="">Back to User Login</a>
+                    <a class="btn btn-primary" href="">Back to User Login</a>
                     
                 
                 </div>
