--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -20,10 +20,10 @@
 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <a class="btn btn-danger" href="">Go to User Registration</a>
+                    <a class="btn btn-danger" routerLink ="/register">Go to User Registration</a>
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
-                    <a class="btn btn-danger" href="">Back to Administrator Login</a>
+                    <a class="btn btn-danger" routerLink ="/">Back to Administrator Login</a>
                 </div>
             </div>
         </div>
