--- a/src/app/issue-book/issue-book.component.html
+++ b/src/app/issue-book/issue-book.component.html
@@ -5,23 +5,23 @@
             <div class="row g-3 mt-4">
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Name</label>
-                    <input type="text" class="form-control">
+                    <input name="name" [(ngModel)] = "name" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Date of Issue</label>
-                    <input type="date" name="" id="" class="form-control">
+                    <input name="dateOfIssue" [(ngModel)] = "dateOfIssue" type="date" name="" id="" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Book Title</label>
-                    <input type="text" class="form-control">
+                    <input name="bookTitle" [(ngModel)] = "bookTitle" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Membership Id</label>
-                    <input type="text" class="form-control">
+                    <input name="membershipId" [(ngModel)] = "membershipId" type="text" class="form-control">
                 </div>
                 
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button class="btn btn-success">Submit</button>
+                    <button (click) = "issueBookValue()" class="btn btn-success">Submit</button>
                 </div>
             </div>
         </div>
