--- a/src/app/user-login/user-login.component.html
+++ b/src/app/user-login/user-login.component.html
@@ -6,18 +6,18 @@
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
                     <label for="" class="form label">Username</label>
-                    <input type="text" class="form-control">
+                    <input name="username" [(ngModel)] = "username" type="text" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
 
                     <label for="" class="form-label">Password</label>
-                    <input type="password" name="" id="" class="form-control">
+                    <input  type="password" name="password" [(ngModel)] = "password" id="" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
 
-                    <button class="btn btn-primary">Login</button>
+                    <button (click) = "userloginValue()" class="btn btn-primary">Login</button>
 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
