--- a/src/app/search-book/search-book.component.html
+++ b/src/app/search-book/search-book.component.html
@@ -5,10 +5,10 @@
             <div class="row g-3 mt-4">
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     <label for="" class="form-label">Book Title</label>
-                    <input type="text" class="form-control">
+                    <input name="bookTitle" [(ngModel)] = "bookTitle"type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button class="btn btn-success">Search</button>
+                    <button (click) = "bookTitleValue()" class="btn btn-success">Search</button>
                 </div>
             </div>
         </div>
