--- a/src/app/user-register/user-register.component.html
+++ b/src/app/user-register/user-register.component.html
@@ -7,7 +7,7 @@
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     
                     <label for="" class="form-label">Name</label>
-                    <input type="text" class="form-control">
+                    <input name="name" [(ngModel)] = "name" type="text" class="form-control">
 
                 </div>
                     
@@ -15,7 +15,7 @@
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     
                     <label for="" class="form-label">Adharcard Number</label>
-                    <input type="text" class="form-control">
+                    <input name="adharCardNo" [(ngModel)] = "adharCardNo" type="text" class="form-control">
 
                 </div>
                    
@@ -23,55 +23,55 @@
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     
                     <label for="" class="form label">Address</label>
-                    <textarea name="" id="" cols="20" rows="5" class="form-control"></textarea>
+                    <textarea name="address" [(ngModel)] = "address" id="" cols="20" rows="5" class="form-control"></textarea>
 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     
                     <label for="" class="form label">Pincode</label>
-                    <input type="text" class="form-control">
+                    <input name="pincode" [(ngModel)] = "pincode" type="text" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     
                     <label for="" class="form label">DOB</label>
-                    <input type="date" name="" id="" class="form-control">
+                    <input name="dob" [(ngModel)] = "dob" type="date" name="" id="" class="form-control">
 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     
                     <label for="" class="form label">Email_Id</label>
-                    <input type="text" class="form-control">
+                    <input name="emailId" [(ngModel)] = "emailId" type="text" class="form-control">
                 
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     
                     <label for="" class="form label">Phn No</label>
-                    <input type="text" class="form-control">
+                    <input name="phnNo" [(ngModel)] = "phnNo" type="text" class="form-control">
                 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     
                     <label for="" class="form label">Username</label>
-                    <input type="text" class="form-control">
+                    <input name="username" [(ngModel)] = "username" type="text" class="form-control">
                 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 12-xxl-12">
                     
                     <label for="" class="form label">Password</label>
-                    <input type="password" name="" id="" class="form-control">
+                    <input  type="password" name="password" [(ngModel)] = "password" id="" class="form-control">
                 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
                     
                     <label for="" class="form label">Confirm Password</label>
-                    <input type="password" name="" id="" class="form-control">
+                    <input type="password" name="confirmPassword" [(ngModel)] = "confirmPassword"  id="" class="form-control">
                 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
                     
                     
-                    <button class="btn btn-success">Register</button>
+                    <button (click) = "userRegisterValue()" class="btn btn-success">Register</button>
                 
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
