--- a/src/app/book-entry/book-entry.component.html
+++ b/src/app/book-entry/book-entry.component.html
@@ -40,10 +40,10 @@
                 </div>
                 <div class="col col-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
                     <label class="form-label">Book Image</label>
-                    <input name="image" [(ngModel)]  = "image" type="file" name="" id="" class="form-control">
+                    <input name="image" [(ngModel)]  = "image" type="text" class="form-control">
                 </div>
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button (click) = "bookValue()" class="btn btn-success"> Add </button>
+                    <button (click) = "bookValue()" class="btn btn-dark"> ADD </button>
                 </div>
             </div>
         </div>
