--- a/src/app/issue-book/issue-book.component.html
+++ b/src/app/issue-book/issue-book.component.html
@@ -21,7 +21,7 @@
                 </div>
                 
                 <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center">
-                    <button (click) = "issueBookValue()" class="btn btn-success">Submit</button>
+                    <button (click) = "issueBookValue()" class="btn btn-dark">SUBMIT</button>
                 </div>
             </div>
         </div>
