--- a/src/app/view-books/view-books.component.html
+++ b/src/app/view-books/view-books.component.html
@@ -1,4 +1,4 @@
-<app-navbar></app-navbar>
+<app-view-navbar></app-view-navbar>
 <div class="container">
     <div class="row">
         <div class="col col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12">
@@ -9,7 +9,7 @@
                         <div class="card-body">
                           <h5 class="card-title">{{i.title}}</h5>
                           <p class="card-text">{{i.description}}</p>
-                          <a href="#" class="btn btn-primary">Get</a>
+                          <a href="#" class="btn btn-primary">Buy</a>
                         </div>
                       </div>
 
