--- a/src/app/view-navbar/view-navbar.component.html
+++ b/src/app/view-navbar/view-navbar.component.html
@@ -2,21 +2,16 @@
     <div class="container-fluid">
       <a class="navbar-brand" routerLink="/">
         <img src="https://vitaldigital.us/wp-content/uploads/2017/11/book-placeholder-small.png" alt="" width="30" height="24">
+
         LibraryApp</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
         <div class="navbar-nav">
-          <a class="nav-link active" aria-current="page" routerLink="/entry">Book Entry</a>
-      
-
-          <a class="nav-link" routerLink="/delete">Delete Book</a>
-          <!-- <a class="nav-link" routerLink="/edit">Edit Book</a> -->
-          <a class="nav-link" routerLink="/issue">Issue Book</a>
-
-
-
+          <a class="nav-link active" aria-current="page" routerLink="/view">View All Books</a>
+          <a class="nav-link" routerLink="/search">Search Book</a>
+          
         </div>
       </div>
     </div>
